--- a/app/src/main/res/layout/activity_create_task.xml
+++ b/app/src/main/res/layout/activity_create_task.xml
@@ -71,7 +71,7 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/drop_off_button">
+                app:layout_constraintTop_toBottomOf="@+id/task_drop_off_button">
 
                 <Button
                     android:id="@+id/errand_location_button"
@@ -197,7 +197,7 @@
             </LinearLayout>
 
             <Button
-                android:id="@+id/drop_off_button"
+                android:id="@+id/task_drop_off_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
