--- a/app/src/main/res/layout/listview_feed.xml
+++ b/app/src/main/res/layout/listview_feed.xml
@@ -55,7 +55,7 @@
             app:layout_constraintTop_toBottomOf="@+id/price" />
 
         <TextView
-            android:id="@+id/duration"
+            android:id="@+id/listview_timestamp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="16dp"
@@ -82,7 +82,7 @@
             android:textColor="@android:color/black"
             android:textSize="24sp"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/duration" />
+            app:layout_constraintTop_toBottomOf="@+id/listview_timestamp" />
 
         <RatingBar
             android:id="@+id/creatorRating"
@@ -139,7 +139,7 @@
             android:text="$"
             android:textColor="@android:color/black"
             app:layout_constraintEnd_toStartOf="@+id/price"
-            app:layout_constraintTop_toBottomOf="@+id/duration" />
+            app:layout_constraintTop_toBottomOf="@+id/listview_timestamp" />
     </android.support.constraint.ConstraintLayout>
 
 </RelativeLayout>
