--- a/app/src/main/res/layout/update_confirm.xml
+++ b/app/src/main/res/layout/update_confirm.xml
@@ -30,10 +30,10 @@
             android:textColor="@android:color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view3" />
+            app:layout_constraintTop_toBottomOf="@+id/uc_view3" />
 
         <TextView
-            android:id="@+id/payment_subtotal"
+            android:id="@+id/uc_payment_subtotal"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginEnd="32dp"
@@ -68,7 +68,7 @@
             app:layout_constraintTop_toBottomOf="@+id/update_confirm_drop_off7" />
 
         <TextView
-            android:id="@+id/payment_fees"
+            android:id="@+id/uc_payment_fees"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="32dp"
@@ -77,7 +77,7 @@
             android:textAlignment="textEnd"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/payment_base_cost" />
+            app:layout_constraintTop_toBottomOf="@+id/uc_payment_base_cost" />
 
         <TextView
             android:id="@+id/update_confirm_drop_off4"
@@ -90,10 +90,10 @@
             android:textColor="@android:color/black"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintTop_toBottomOf="@+id/uc_textView" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/uc_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
@@ -101,10 +101,10 @@
             android:text="PAYMENT"
             android:textSize="10sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view2" />
+            app:layout_constraintTop_toBottomOf="@+id/uc_view2" />
 
         <TextView
-            android:id="@+id/payment_base_cost"
+            android:id="@+id/uc_payment_base_cost"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="32dp"
@@ -114,10 +114,10 @@
             android:textColor="@android:color/black"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintTop_toBottomOf="@+id/uc_textView" />
 
         <View
-            android:id="@+id/view2"
+            android:id="@+id/uc_view2"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="16dp"
@@ -128,7 +128,7 @@
             app:layout_constraintTop_toBottomOf="@+id/update_confirm_special_instructions" />
 
         <View
-            android:id="@+id/view"
+            android:id="@+id/uc_view"
             style="@xml/divider"
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -142,7 +142,7 @@
             app:layout_constraintTop_toBottomOf="@+id/update_confirm_description" />
 
         <View
-            android:id="@+id/view3"
+            android:id="@+id/uc_view3"
             style="@xml/divider"
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -156,7 +156,7 @@
             app:layout_constraintTop_toBottomOf="@+id/update_confirm_drop_off5" />
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/uc_textView9"
             style="@xml/divider"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -169,7 +169,7 @@
             app:layout_constraintTop_toBottomOf="@+id/update_confirm_drop_off" />
 
         <TextView
-            android:id="@+id/textView13"
+            android:id="@+id/uc_textView13"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
@@ -177,7 +177,7 @@
             android:text="DROP OFF ADDRESS"
             android:textSize="10sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view" />
+            app:layout_constraintTop_toBottomOf="@+id/uc_view" />
 
         <TextView
             android:id="@+id/update_confirm_errand"
@@ -188,7 +188,7 @@
             android:textSize="14sp"
             android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView9" />
+            app:layout_constraintTop_toBottomOf="@+id/uc_textView9" />
 
         <TextView
             android:id="@+id/update_confirm_drop_off"
@@ -201,7 +201,7 @@
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView13" />
+            app:layout_constraintTop_toBottomOf="@+id/uc_textView13" />
 
         <TextView
             android:id="@+id/update_confirm_title"
@@ -215,7 +215,7 @@
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView10" />
+            app:layout_constraintTop_toBottomOf="@+id/uc_textView10" />
 
         <TextView
             android:id="@+id/update_confirm_description"
@@ -232,7 +232,7 @@
             app:layout_constraintTop_toBottomOf="@+id/update_confirm_title" />
 
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/uc_textView10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
