--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="75dp"
+    android:layout_height="wrap_content"
     tools:context=".NotificationFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -11,28 +11,31 @@
         android:id="@+id/profile"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
+
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_launcher_round"
-
-        />
+        app:srcCompat="@mipmap/ic_launcher_round" />
 
     <TextView
         android:id="@+id/message"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
 
-        android:layout_marginRight="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
 
+        android:layout_marginTop="16dp"
         android:maxLines="2"
-        android:text="Display Name has requested your Errand, do you accept?"
 
-        android:textSize="7pt"
+        android:text="Display Name has requested your Errand, do you accept?"
+        android:textColor="@android:color/black"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toRightOf="@id/profile"
         app:layout_constraintStart_toEndOf="@+id/profile"
         app:layout_constraintTop_toTopOf="parent" />
@@ -40,63 +43,71 @@
 
     <Button
         android:id="@+id/button_decline"
+        style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
 
-        android:visibility="invisible"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:text="DECLINE"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button_accept"
-        app:layout_constraintTop_toBottomOf="@id/message"
-        />
+        app:layout_constraintTop_toBottomOf="@id/message" />
 
     <Button
         android:id="@+id/button_accept"
+        style="@android:style/Widget.Material.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
 
-        android:visibility="invisible"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:text="ACCEPT"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/profile"
-        app:layout_constraintTop_toBottomOf="@id/message"
         app:layout_constraintRight_toLeftOf="@id/button_decline"
-        />
+        app:layout_constraintStart_toEndOf="@+id/profile"
+        app:layout_constraintTop_toBottomOf="@id/message" />
 
 
     <Button
         android:id="@+id/button_dismiss"
+        style="@android:style/Widget.Material.Button.Borderless.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="DISMISS"
-        android:layout_marginRight="8dp"
+        android:layout_marginBottom="16dp"
 
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="16dp"
+        android:text="DISMISS"
         android:visibility="invisible"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/message"
-
-        />
+        app:layout_constraintTop_toBottomOf="@id/message" />
 
     <Button
         android:id="@+id/button_confirm"
+        style="@android:style/Widget.Material.Button.Colored"
         android:layout_width="wrap_content"
+
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
 
         android:layout_marginRight="156dp"
         android:layout_marginStart="8dp"
-
+        android:layout_marginTop="16dp"
         android:text="Confirm completion"
         android:visibility="visible"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/message"
         app:layout_constraintStart_toEndOf="@+id/profile"
-
-        />
+        app:layout_constraintTop_toBottomOf="@+id/message" />
 
 </android.support.constraint.ConstraintLayout>
