--- a/app/src/main/res/layout/update_confirm.xml
+++ b/app/src/main/res/layout/update_confirm.xml
@@ -237,37 +237,37 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginTop="16dp"
-            android:text="ERRAND UPDATE_CONFIRM"
+            android:text="ERRAND UPDATE"
             android:textSize="10sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-            <Button
-                android:id="@+id/update_confirm_confirm"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="32dp"
-                android:layout_marginTop="32dp"
-                android:text="CONFIRM CHANGES"
-                app:layout_constraintHorizontal_bias="0.2"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/update_confirm_drop_off9" />
-            <Button
-                android:id="@+id/update_confirm_cancel"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="32dp"
-                android:layout_marginTop="32dp"
-                android:layout_marginLeft="32dp"
-                android:text="EDIT"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toRightOf="@id/update_confirm_confirm"
-                app:layout_constraintTop_toBottomOf="@+id/update_confirm_drop_off9" />
+        <Button
+            android:id="@+id/update_confirm_confirm"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="32dp"
+            android:layout_marginTop="32dp"
+            android:text="CONFIRM CHANGES"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/update_confirm_drop_off9" />
+
+        <Button
+            android:id="@+id/update_confirm_cancel"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="32dp"
+            android:layout_marginLeft="32dp"
+            android:layout_marginTop="32dp"
+            android:text="EDIT"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/update_confirm_confirm"
+            app:layout_constraintTop_toBottomOf="@+id/update_confirm_drop_off9" />
 
 
     </android.support.constraint.ConstraintLayout>
